--- a/public/sass/parts/_sidenav.scss
+++ b/public/sass/parts/_sidenav.scss
@@ -12,7 +12,7 @@
    align-items: flex-end;
    position: fixed;
    box-shadow: 1px 1px 0px 1px rgba(0, 0, 0, 0.103);
-   //max-height: 100vh;
+   max-height: 100vh;
    //display: none;
 }
 
