--- a/public/sass/parts/_header.scss
+++ b/public/sass/parts/_header.scss
@@ -1,5 +1,5 @@
 .header {
-   z-index: 100;
+   z-index: 999999;
    font-size: 1.4rem;
    height: 7rem;
    width: 100%;
@@ -11,7 +11,36 @@
    align-items: center;
    position: fixed;
    box-shadow: 1px 2px 1px 1px rgba(0, 0, 0, 0.103);
+   transition: all 3s ease;
    //display: none;
+}
+
+////////////////////////////////////////
+// Alerts
+
+.alert {
+   position: fixed;
+   top: 8%;
+   left: 50%;
+   -webkit-transform: translateX(-70%);
+   transform: translateX(-70%);
+   z-index: 9999;
+   color: #fff;
+   font-size: 1.8rem;
+   font-weight: 400;
+   text-align: center;
+   border-bottom-left-radius: 4px;
+   border-bottom-right-radius: 4px;
+   padding: 1rem;
+   -webkit-box-shadow: var(--shadow);
+   box-shadow: var(--shadow);
+   transition: all 2s;
+}
+.alert--success {
+   background-color: var(--color-tick);
+}
+.alert--error {
+   background-color: var(--color-red-light);
 }
 
 ////////////////////////////////////////
@@ -45,8 +74,72 @@
 }*/
 
 ////////////////////////////////////////
+// Warning
+.warning {
+   display: none;
+   position: fixed;
+   top: 8%;
+   left: 50%;
+   -webkit-transform: translateX(-60%);
+   transform: translateX(-60%);
+   z-index: 999;
+   background-color: $grey-color-dark;
+   color: #fff;
+   font-size: 1.8rem;
+   font-weight: 400;
+   text-align: center;
+   border-bottom-left-radius: 4px;
+   border-bottom-right-radius: 4px;
+   padding: 1rem;
+   -webkit-box-shadow: var(--shadow);
+   box-shadow: var(--shadow);
+   //transition: 2s;
+   max-width: 40rem;
+
+   &--yes {
+      background-color: $color-red-strong;
+      color: $color-white;
+      border: none;
+      font-family: inherit;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      padding: 1.8rem 3rem;
+      cursor: pointer;
+      width: 15rem;
+      margin: 0.5rem;
+
+      &:hover {
+         background-color: $color-red-light;
+      }
+      &:active {
+         background-color: $color-red-strong;
+      }
+   }
+   &--no {
+      background-color: $color-orange;
+      color: $color-white;
+      border: none;
+      font-family: inherit;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      padding: 1.8rem 3rem;
+      cursor: pointer;
+      width: 15rem;
+      margin: 0.5rem;
+
+      &:hover {
+         background-color: $color-orange-light;
+      }
+      &:active {
+         background-color: $color-orange-strong;
+      }
+   }
+}
+
+////////////////////////////////////////
 // SEARCH BOX
 .search {
+   display: none;
    @media only screen and (max-width: $bp-five) {
       display: none;
    }
@@ -117,13 +210,18 @@
 // USER NAVIGATON
 .user-nav {
    background-color: var(--color-white);
-   align-self: stretch;
+   //align-self: stretch;
+   height: 100%;
 
    display: flex;
 
    align-items: center;
 
    box-shadow: var(--shadow);
+
+   // @media only screen and (max-width: $bp-seven) {
+   //    width: 30rem;
+   // }
 
    & > * {
       padding: 0 2rem;
@@ -204,20 +302,25 @@
    }
 
    &__user {
-      box-shadow: $shadow-2;
+      box-shadow: $shadow;
       background-color: $color-white;
-      @media only screen and (max-width: $bp-five) {
+      //width: 15rem;
+      @media only screen and (max-width: $bp-seven) {
          span {
             display: none;
+            width: 9rem;
          }
       }
    }
 
    &__user-photo {
-      box-shadow: var(--shadow-2);
-      height: 3.75rem;
+      //box-shadow: var(--shadow-2);
+      height: 4.5rem;
       border-radius: 4px;
       margin-right: 1rem;
+      @media only screen and (max-width: $bp-seven) {
+         margin-right: 0;
+      }
    }
 
    &__user-name {
