--- a/public/sass/parts/_stores.scss
+++ b/public/sass/parts/_stores.scss
@@ -22,6 +22,7 @@
    grid-template-columns: repeat(2, 1fr);
    grid-row-gap: 1rem;
    box-shadow: $shadow-2;
+   max-width: 35rem;
 
    &__img {
       width: 100%;
