--- a/views/userSignup.pug
+++ b/views/userSignup.pug
@@ -4,7 +4,7 @@ block content
     main.main
         .signup__form
             img.login__form__header(src='imagens/Lalitaa/Lalitaa_logo_transparent.png' alt='')
-            form.form.form--login(action='#')
+            form.form.form--signup(action='#')
                 .form__group
                 input#nome.form__input(type='text' name='' placeholder='Nome' required='')
                 .form__group
